@@ -39,7 +39,9 @@ Version 0.9
 
 - The IRC logs lexer is now able to colorize weechat logs too.
 
-- Added new assambler lexers.
+- Added various assembler language lexers.
+
+- The Lua lexer now recognizes multi-line comments.
 
 
 Version 0.8.1
